--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,29 @@
 #root {
-  margin: 0 auto;
   padding: 2rem;
+  width: 100%;
+}
+
+h1 {
   text-align: center;
 }
 
 .inputs {
+  width: 40%;
   display: flex;
+  gap: 25px;
+  flex-direction: column;
+
+}
+
+.drawing {
+  width: 50%;
+  margin-top: -100px;
+}
+
+.containerMid {
+  
+  display: flex;
+  justify-content: center;
   gap: 25px;
 }
 
@@ -15,6 +33,26 @@
   gap: 10px;
 }
 
+.input input {
+  padding: 20px;
+}
+
+label {
+  font-weight: bold;
+  font-size: 24px;
+}
+
+select {
+  appearance: none;
+    border: none;
+    outline: none;
+    font-family: Roboto,sans-serif;
+    margin-bottom: 15px;
+    padding: 20px 20px;
+    border-radius: 12px;
+    font-size: 18px;
+    box-shadow: 0 4px 30px #0003;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
