--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,10 @@
 }
 
 h1 {
+  margin-bottom: 100px;
+  font-size: 20px;
   text-align: center;
-}
+ }
 
 .inputs {
   width: 40%;
@@ -21,9 +23,9 @@ h1 {
 }
 
 .containerMid {
-  
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 25px;
 }
 
@@ -87,4 +89,22 @@ select {
 
 .read-the-docs {
   color: #888;
+}
+
+@media (max-width: 900px) {
+  .root {
+    padding: 10px;
+  }
+ .containerMid {
+  flex-direction: column;
+  align-items: center;
+ }
+
+ .drawing {
+  width: 80%;
+ }
+
+ .inputs {
+  width: 80%;
+ }
 }
